--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Bethlehem</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Billiards</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>N/A</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Aurora, Co</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There are always challenges </p>
     </section>
 
     <footer id="footer">
